--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -70,7 +70,7 @@
     "NEW_SIZE = 256\n",
     "\n",
     "batch_size = 4\n",
-    "epochs = 3\n",
+    "epochs = 10\n",
     "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', mode='min', verbose=0, patience=10)\n",
     "\n",
     "n_fold = 0\n",
@@ -159,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Salvando modelo"
+    "##### Salvando modelo e history"
    ]
   },
   {
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_report.save_history_txt()"
+    "save_report.save_history()"
    ]
   },
   {
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Gráfico - Performance da Execução"
+    "##### Gráficos - Performance do Treino"
    ]
   },
   {
@@ -272,7 +272,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dice.generate_graphic(segment=segment, save_report=save_report, epochs=epochs)"
+    "dice.generate_graphic(segment=segment, save_report=save_report, epochs=epochs, graph_type=\"iou_score\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dice.generate_graphic(segment=segment, save_report=save_report, epochs=epochs, graph_type=\"loss\")"
    ]
   },
   {
