--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -70,7 +70,7 @@
     "NEW_SIZE = 256\n",
     "\n",
     "batch_size = 4\n",
-    "epochs = 10\n",
+    "epochs = 3\n",
     "early_stopping = tf.keras.callbacks.EarlyStopping(monitor='val_loss', mode='min', verbose=0, patience=10)\n",
     "\n",
     "n_fold = 0\n",
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dice.generate_graphic(segment=segment, save_report=save_report, epochs=epochs, graph_type=\"iou_score\")"
+    "dice.generate_graphic(segment=segment, save_report=save_report, epochs=epochs, graphic_type=\"iou_score\")"
    ]
   },
   {
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dice.generate_graphic(segment=segment, save_report=save_report, epochs=epochs, graph_type=\"loss\")"
+    "dice.generate_graphic(segment=segment, save_report=save_report, epochs=epochs, graphic_type=\"loss\")"
    ]
   },
   {
