--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "segment = SegmentationModel(N=imgs.X_train.shape[-1], segmentation_model=config[\"model\"], backbone_name=config[\"backbone_name\"],\\\n",
-    "                             callback=callback, trainDS=data_aug.trainDS, valDS=data_aug.valDS, epochs=config[\"epochs\"])"
+    "                             callback=callback, input_layer_shape=imgs.X_train.shape[1:], trainDS=data_aug.trainDS, valDS=data_aug.valDS, epochs=config[\"epochs\"])"
    ]
   },
   {
