--- a/main_notebook.ipynb
+++ b/main_notebook.ipynb
@@ -69,11 +69,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if config[\"callback\"] == \"early_stopping\":\n",
-    "    callback = tf.keras.callbacks.EarlyStopping(monitor=config[\"monitor\"], mode=config[\"mode\"], \\\n",
-    "                                                verbose=config[\"verbose\"], patience=config[\"patience\"])\n",
+    "callbacks = []\n",
+    "if \"early_stopping\" in config[\"callback\"]:\n",
+    "    callbacks.append(tf.keras.callbacks.EarlyStopping(monitor=config[\"monitor\"], mode=config[\"mode_es\"], \\\n",
+    "                                                verbose=config[\"verbose_es\"], patience=config[\"patience_es\"]))\n",
+    "elif \"reduce_lr_on_plateau\" in config[\"callback\"]:\n",
+    "    callbacks.append(tf.keras.callbacks.ReduceLROnPlateau(monitor=config[\"monitor\"], factor=config[\"factor_lr\"],\n",
+    "                              patience=config[\"patience_lr\"], min_lr=[\"min_lr\"]))\n",
     "elif config[\"callback\"] == None:\n",
-    "    callback = None"
+    "    callbacks = None"
    ]
   },
   {
@@ -99,7 +103,7 @@
    "outputs": [],
    "source": [
     "imgs = Dataset(folder=config[\"dataset_folder\"], norm_imgs_folder=config[\"norm_imgs_folder\"], gt_folder=config[\"gt_folder\"], \\\n",
-    "                ORIGINAL_SIZE=config[\"ORIGINAL_SIZE\"], NEW_SIZE=config[\"NEW_SIZE\"])"
+    "                ORIGINAL_SIZE=config[\"ORIGINAL_SIZE\"], NEW_SIZE=config[\"NEW_SIZE\"], normalize=config[\"normalize\"])"
    ]
   },
   {
@@ -151,7 +155,7 @@
    "outputs": [],
    "source": [
     "segment = SegmentationModel(N=imgs.X_train.shape[-1], segmentation_model=config[\"model\"], backbone_name=config[\"backbone_name\"],\\\n",
-    "                             callback=callback, input_layer_shape=imgs.X_train.shape[1:], trainDS=data_aug.trainDS, valDS=data_aug.valDS, epochs=config[\"epochs\"])"
+    "                             callback=callbacks, input_layer_shape=imgs.X_train.shape[1:], trainDS=data_aug.trainDS, valDS=data_aug.valDS, epochs=config[\"epochs\"])"
    ]
   },
   {
@@ -195,7 +199,7 @@
    "outputs": [],
    "source": [
     "test_imgs = Dataset(folder=config[\"output_folder\"], norm_imgs_folder=config[\"test_imgs_folder\"], gt_folder=config[\"gt_test_folder\"],\\\n",
-    "                     ORIGINAL_SIZE=config[\"ORIGINAL_SIZE\"], NEW_SIZE=config[\"NEW_SIZE\"])"
+    "                     ORIGINAL_SIZE=config[\"ORIGINAL_SIZE\"], NEW_SIZE=config[\"NEW_SIZE\"], normalize=config[\"normalize\"])"
    ]
   },
   {
